# hhgen-cli

./: CMakeLists.txt  Notes.txt
data/: 2024-2025.csv
lib/jlib/: CMakeLists.txt  jdate.c  jdate.h  jio.c  jio.h
src/: .hhgen.c.swp  .hhgen.h.swp  .main.c.swp  hhgen.c  hhgen.h  main.c
src/lib/jlib/: .jdate.c.swp  .jdate.h.swp  .jio.c.swp  .jio.h.swp  .jlib.c.swp  .jlib.h.swp  jdate.c  jdate.h  jlib.c  jlib.h
test/: adddays  adddays.c  adddaysold  adddaysold.c  datetest  datetest.c  fread  fread.c  input  input.c  testfeof  testfeof.c  testfseek  testfseek.c  zeller  zeller.c
